# swagger.yaml
@@ -43,9 +43,9 @@ paths:
                 $ref: '#/components/schemas/User'
         '409':
           description: The user already exists
-        '412':
+        '400':
           description: Invalid input data
-          
+
   /user/login:
     post:
       tags:
@@ -55,7 +55,7 @@ paths:
       summary: Log user into the system
       description: Create a new session for an existing user
       responses:
-        '201':
+        '200':
           description: Session successfully created
           content:
             application/json:
@@ -123,7 +123,9 @@ paths:
                 $ref: '#/components/schemas/User'
         '404':
           description: Invalid user id, user not found
-        '412':
+        '409':
+          description: The user already exists
+        '400':
           description: Invalid input data
   /user/logout:
     delete:
@@ -175,14 +177,12 @@ paths:
       summary: Log manager into the system
       description: Create a new session for an existing manager
       responses:
-        '201':
+        '200':
           description: Session successfully created
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/Manager'
-        '412':
-          description: Invalid input data
         '401':
           description: Manager not authenticated          
           
@@ -222,9 +222,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Baggage'
-        '409':
-          description: Baggage already exists
-        '412':
+        '400':
           description: Invalid input data  
 
   /baggage/{id}:
@@ -276,7 +274,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Booking'
-        '412':
+        '400':
           description: Invalid input data    
           
   /booking/{id}:
@@ -307,10 +305,10 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/User'
+                $ref: '#/components/schemas/Booking'
         '404':
           description: Invalid booking id, booking not found
-        '412':
+        '400':
           description: Invalid input data
     delete:
       tags:
@@ -360,7 +358,25 @@ paths:
         '404':
           description: Invalid booking id, booking is not found          
 
-  /boarding_check:
+  /boarding-check:
+    get:
+      tags:
+        - Boarding check
+      security:
+        - cookieAuth_flight_mgr: []
+        - cookieAuth_checkin_mgr: []
+        - cookieAuth_security_mgr: []
+      summary: Get all bookings
+      description: Get the list of all bookings and their details
+      responses:
+        '200':
+          description: List of all bookings
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Boarding_check'
     post:
       tags:
         - Boarding check
@@ -383,12 +399,10 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Boarding_check'
-        '409':
-          description: The boarding already exists
-        '412':
+        '400':
           description: Invalid input data
           
-  /boarding_check/{id}:
+  /boarding-check/{id}:
     get:
       tags:
         - Boarding check
@@ -416,28 +430,7 @@ paths:
         '404':
           description: Invalid boarding id, boarding not found          
 
-
-  /boarding_check/getAll:
-    get:
-      tags:
-        - Boarding check
-      security:
-        - cookieAuth_flight_mgr: []
-        - cookieAuth_checkin_mgr: []
-        - cookieAuth_security_mgr: []
-      summary: Get all bookings
-      description: Get the list of all bookings and their details
-      responses:
-        '200':
-          description: List of all bookings
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Boarding_check'   
-             
-  /flight/getAll:
+  /flight:
     get:
       tags:
         - Flight
@@ -478,7 +471,7 @@ paths:
         '404':
           description: Invalid flight id, flight not found   
           
-  /flight/{id}/getPublicStatus:
+  /flight/{id}/public-status:
     get:
       tags:
         - Flight
@@ -498,11 +491,13 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Flight'
+                type: object
+                properties:
+                  status:
+                    type: integer
+                    example: 1
         '404':
           description: Invalid flight id, flight not found   
- 
-  /flight/{id}/setPublicStatus:
     put:
       tags:
         - Flight
@@ -533,78 +528,10 @@ paths:
           description: Flight status  was successfully updated
         '404':
           description: Invalid Flight id, Flight not found
-        '412':
+        '400':
           description: Invalid input data          
           
-  /flight/{id}/openGate:
-    put:
-      tags:
-        - Flight
-      security:
-        - cookieAuth_flight_mgr: []
-      summary: Update status of gate
-      description: The progress of updating gate status
-      parameters:
-        - name: id
-          in: path
-          description: id of flight to be given new status of gate
-          required: true
-          schema:
-            type: integer
-            example: 1
-      requestBody:
-        description: New flight status
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                status:
-                  type: integer
-                  example: 1
-      responses:
-        '200':
-          description: Gate status was successfully updated
-        '404':
-          description: Invalid Flight id, Flight not found
-        '412':
-          description: Invalid input data          
-                    
-  /flight/{id}/closeGate:
-    put:
-      tags:
-        - Flight
-      security:
-        - cookieAuth_flight_mgr: []
-      summary: Update status of gate
-      description: The progress of updating gate status of gate
-      parameters:
-        - name: id
-          in: path
-          description: id of flight to be given new status
-          required: true
-          schema:
-            type: integer
-            example: 1
-      requestBody:
-        description: New flight status
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                status:
-                  type: integer
-                  example: 1
-      responses:
-        '200':
-          description: Gate status was successfully updated
-        '404':
-          description: Invalid Flight id, Flight not found
-        '412':
-          description: Invalid input data          
-                    
-  /flight/{id}/getAllUsers:
+  /flight/{id}/user:
     get:
       tags:
         - Flight
@@ -632,7 +559,7 @@ paths:
         '404':
           description: Invalid flight id, flight not found   
               
-  /flight/{id}/getAllBaggages:
+  /flight/{id}/baggage:
     get:
       tags:
         - Flight
@@ -685,9 +612,7 @@ components:
           format: date
           example: 2017-10-11
         passport_number:
-          type: integer
-          format: int64
-          readOnly: true
+          type: string
           example: 136544
         email:
           type: string
@@ -770,9 +695,11 @@ components:
           type: integer
           example: 2
         flight_id:
-          $ref: '#/components/schemas/Flight'
+          type: integer
+          example: 1
         user_id:
-          $ref: '#/components/schemas/User'
+          type: integer
+          example: 1
     
     Baggage:
       type: object
@@ -806,9 +733,11 @@ components:
           type: integer
           example: 2            
         manager_id:
-          $ref: '#/components/schemas/Manager'          
+          type: integer
+          example: 1
         booking_id:
-          $ref: '#/components/schemas/Booking'          
+          type: integer
+          example: 1
 
 
   securitySchemes:
